--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -184,7 +184,7 @@ button, a { -webkit-tap-highlight-color: transparent; } section { scroll-margin:
     font-size: 1.25rem;
 }
 
-.header__language-toggle span, .header__language-toggle .fa-caret-down  {
+.header__language-toggle span, .header__language-toggle .fa-caret-down, .header__language-toggle .fa-caret-up  {
     font-size: 0.7rem;
 } 
 
@@ -204,7 +204,7 @@ button, a { -webkit-tap-highlight-color: transparent; } section { scroll-margin:
     box-shadow: var(--box-shadow);
 }
 
-.header__languages-dropdown.visible {
+.header__languages-dropdown.expanded {
     display: block;
 }
 
@@ -521,7 +521,7 @@ button, a { -webkit-tap-highlight-color: transparent; } section { scroll-margin:
 .contact__form-grid {
     display: grid;
     grid-template-columns: 1fr 1fr; 
-    gap: 1.25rem; 
+    gap: 0 1.25rem;
 }
 
 .full-width {
@@ -535,13 +535,14 @@ button, a { -webkit-tap-highlight-color: transparent; } section { scroll-margin:
 }
 
 .contact__label {
-    margin: 0 0 calc( var(--margin-vertical) / 2 ) 0;
+    margin: 0 0 var(--margin-vertical) 0;
+    display: block;
 }
 
 .contact__input {
     background-color: var(--input-bg);
     color: var(--input-color);
-    padding: calc(var(--padding-vertical) / 12 * 11) calc( var(--padding-horizontal) / 2 );
+    padding: var(--padding-vertical) var(--padding-horizontal);
 }
 
 .contact__input:focus {
