--- a/frontend/public/assets/kit-098a6cd2de-web/scss/_variables.scss
+++ b/frontend/public/assets/kit-098a6cd2de-web/scss/_variables.scss
@@ -64,6 +64,8 @@ $fa-var-font-awesome-logo-full: \f2b4;
 $fa-var-globe: \f0ac;
 $fa-var-moon: \f186;
 $fa-var-paper-plane: \f1d8;
+$fa-var-share-nodes: \f1e0;
+$fa-var-share-alt: \f1e0;
 $fa-var-sun: \f185;
 $fa-var-ufo: \e047;
 
@@ -95,6 +97,8 @@ $fa-icons: (
   "globe": $fa-var-globe,
   "moon": $fa-var-moon,
   "paper-plane": $fa-var-paper-plane,
+  "share-nodes": $fa-var-share-nodes,
+  "share-alt": $fa-var-share-alt,
   "sun": $fa-var-sun,
   "ufo": $fa-var-ufo,
 );
